Code/CarpentryWorkshopClient/src/view/scss/index.scss
/* ... */
.fix-color {
  .ant-select {
    height: 100%;
    background: #e9e9e9 !important;
    padding: 20px;
    .ant-select-selector {
      background: unset !important;
    }
  }
  Input {
    background: #e9e9e9 !important;
  }
}
.modal-user-all .modal-employee-box2 {
  padding-bottom: 40px;
}
.modal-payroll {
  display: flex;
  width: 1032px;
  height: 684px;
  flex-direction: column;
  align-items: flex-start;
  border-radius: 60px;
  background: #f9faf5;
  .modal-head {
    display: flex;
    height: 86px;
    justify-content: center;
    align-items: center;
    gap: 10px;
    flex-shrink: 0;
    align-self: stretch;
    background: #3a5a40;
    h3 {
      color: #fff;
      font-family: Noto Sans;
      font-size: 40px;
      font-weight: 600;
      padding-top: unset;
      padding-left: unset;
    }
    .select-input {
      width: 236px;
      .ant-select-selector {
        border-radius: 60px;
        padding: 10px 20px;
      }
    }
  }
  .body-payroll-all {
    display: flex;
    padding: 40px 50px;
    flex-direction: column;
    align-items: center;
    gap: 20px;
    flex: 1 0 0;
    align-self: stretch;
    .body-payroll1 {
      overflow: hidden;
      max-height: 422px;
      overflow-y: auto;
      display: flex;
      padding: 10px 20px;
      flex-direction: column;
      align-items: center;
      gap: 10px;
      flex: 1 0 0;
      align-self: stretch;
      border-radius: 30px;
      border: 1px solid #000;
      background: #fff;
      .div1 {
        display: flex;
        padding: 10px;
        align-items: center;
        gap: 10px;
        align-self: stretch;
        .div1-child {
          display: flex;
          align-items: center;
          gap: 10px;
          flex: 1 0 0;
        }
        .div1-child-cn {
          display: flex;
          align-items: center;
          gap: 10px;
          flex: 1 0 0;
          .p1 {
            width: 21px;
          }
          p {
            color: #000;
            text-align: center;
            font-family: Noto Sans;
            font-size: 24px;
            font-style: normal;
            font-weight: 400;
            line-height: normal;
          }
          .money {
            display: flex;
            align-items: center;
            gap: 10px;
            flex: 1 0 0;
            p {
              color: #000;
              text-align: right;
              font-family: Noto Sans;
              font-size: 24px;
              font-weight: 400;
              flex: 1 0 0;
            }
          }
        }
      }
      .div2 {
        display: flex;
        padding: 10px;
        flex-direction: column;
        justify-content: center;
        align-items: flex-start;
        gap: 12px;
        align-self: stretch;
        .div1-child {
          align-self: stretch;
        }
      }
    }
    .body-payroll {
      display: flex;
      height: 90px;
      padding: 20px;
      flex-direction: column;
      align-items: center;
      gap: 10px;
      align-self: stretch;
      border-radius: 30px;
      border: 1px solid #000;
      background: #fff;

      .body-child {
        display: flex;
        padding: 10px;
        align-items: center;
        gap: 10px;
        align-self: stretch;
        .body-child-cn {
          display: flex;
          align-items: center;
          gap: 10px;
          flex: 1 0 0;
          .body-child-cn-1 {
            display: flex;
            align-items: center;
            gap: 10px;
            flex: 1 0 0;
            p {
              color: #000;
              font-family: Noto Sans;
              font-size: 24px;
              font-weight: 400;
            }
            .child-pay {
              display: flex;
              align-items: center;
              gap: 10px;
              flex: 1 0 0;
              p {
                display: flex;
                flex: 1 0;
                justify-content: flex-end;
              }
            }
          }
        }
      }
      .box-column {
        display: flex;
        padding: 10px;
        flex-direction: column;
        justify-content: center;
        align-items: flex-start;
        gap: 12px;
        align-self: stretch;
        .body-child {
          padding: unset;
          p {
            color: #000;
            font-family: Noto Sans;
            font-size: 24px;
            font-weight: 400;
          }
        }
      }
    }
  }
}
.list-input-search .ant-input {
  background: none !important;
  border: none !important;
  padding: 0 !important;
  border-radius: 0 !important;
}

